--- a/form.html
+++ b/form.html
@@ -18,8 +18,8 @@
             <label for="location">Preferred Location</label>
             <input type="text" id="location" name="location" placeholder="e.g. Central Park" >
 
-            <label for="date">Date</label>
-            <input type="date" id="date" name="date" >
+            <label for="date" >Date</label>
+            <input type="date" id="date" name="date" required>
 
             <label for="time">Time</label>
             <input type="time" id="time" name="time" required>
