--- a/form.html
+++ b/form.html
@@ -19,7 +19,7 @@
             <input type="text" id="location" name="location" placeholder="e.g. Central Park" >
 
             <label for="date" >Date</label>
-            <input type="date" id="date" name="date" required>
+            <input type="date" id="date" name="date" placeholder="whenever you are free" required>
 
             <label for="time">Time</label>
             <input type="time" id="time" name="time" required>
